# django_auditor_logs

./: LICENSE  MANIFEST.in  README.md  quickstart.rst  requirements.txt  setup.cfg
src/: manage.py
src/auditor_migrations/: 0001_initial.py
src/django_auditor_logs/: apps.py  metadata.py  models.py  views.py
src/django_auditor_logs/auditor_schema/: builder.py
src/django_auditor_logs/middleware/: metadata_middleware.py
src/djangoauditor/: auditor_schema.py  settings.py  urls.py  wsgi.py
src/testapp/: admin.py  models.py
src/testapp/migrations/: 0001_initial.py
