[metadata]
name = django_auditor_logs
version = 2.0.1
description = Package for easy creation of audit logs in Django projects
long_description = file:./quickstart.rst
url = https://90horasporsemana.com
author = Yeison Fernandez
author_email = contacto@90horasporsemana.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
include_package_data = true
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires =
    Django >= 2.2

[options.packages.find]
where=src
include=django_auditor_logs*